[WEB-7900] Fix metrics table second column width and overflow

--- a/assets/styles/components/_metrics-table.scss
+++ b/assets/styles/components/_metrics-table.scss
@@ -1,11 +1,13 @@
 .metrics-table-wrapper {
+  overflow: hidden;
+
   table {
     table-layout: fixed;
     width: 100%;
 
-    td:first-child,
-    th:first-child {
-      width: 35%;
+    td:nth-child(2),
+    th:nth-child(2) {
+      width: 25%;
     }
 
     td,
